refactor: add openapi spec PATCH /jobs
This leaves the behavior exactly the same as before, but adds the
openapi spec for the PATCH /jobs controller.

The specification produces the exact same behavior as before, with one
exception:
- the error message when `status` field is null or undefined is
  different. It is now directly provided by SpringBoot (via Jackson).
  This produces an rather ugly message, because it leaks implementation
  details like specific classes involved such.

Even though there is a change in the behavior, I'm still gonna call this
a refactor 🤷
